--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,52 @@
+aiohttp==3.7.4
+alpaca-trade-api==1.4.3
 asgiref==3.4.1
-Django==4.0
+async-timeout==3.0.1
+attrs==21.4.0
+autobahn==21.11.1
+Automat==20.2.0
+certifi==2021.10.8
+cffi==1.15.0
+channels==3.0.4
+chardet==3.0.4
+charset-normalizer==2.0.10
+constantly==15.1.0
+cryptography==36.0.1
+daphne==3.0.2
+defusedxml==0.7.1
+Django==4.0.1
+django-allauth==0.47.0
+django-cors-headers==3.11.0
 djangorestframework==3.13.1
+hyperlink==21.0.0
+idna==3.3
+incremental==21.3.0
+msgpack==1.0.2
+multidict==5.2.0
+numpy==1.22.1
+oauthlib==3.1.1
+pandas==1.3.5
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+PyJWT==2.3.0
+pyOpenSSL==21.0.0
+python-dateutil==2.8.2
+python3-openid==3.2.0
 pytz==2021.3
+PyYAML==5.4.1
+requests==2.27.1
+requests-oauthlib==1.3.0
+service-identity==21.1.0
+six==1.16.0
 sqlparse==0.4.2
+Twisted==21.7.0
+twisted-iocpsupport==1.0.2
+txaio==21.2.1
+typing_extensions==4.0.1
 tzdata==2021.5
+urllib3==1.26.8
+websocket-client==1.2.3
+websockets==9.1
+yarl==1.7.2
+zope.interface==5.4.0
